# cowrieprocessor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  cowrie_malware_enrichment.py  deployment_configs.md  es_reports.py  orchestrate_sensors.py  process_cowrie.py  pyproject.toml  quick_guide.md  refresh_cache_and_reports.py  requirements.txt  secrets_resolver.py  sensors.example.toml  status_dashboard.py  submit_vtfiles.py  update-cowrie-dshield.sh
.github/workflows/: ci.yml
scripts/: cowrie.reports.daily-index.json  cowrie.reports.monthly-index.json  cowrie.reports.weekly-index.json
